2006-02-04  Michal Nazarewicz  <mina86/AT/tlen.pl>

	* mp3rip: + --config option added as synonym of --setup

2005-12-07  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* quotes.txt: + quote by Plato added

2005-12-05  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* mpd-show.c: + tiny bug fixed
	* mpd-show-wrapper.sh: + may be called with argument instead of $0

	* mpd-show.c: + song_t structure removed
	+ buffer is recreated only on song change
	+ free_song() and diff_song() removed (no longer needed)
	+ get_song() now recretes buf when needed as well
	+ print_song() uses global buf now

2005-12-04  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* mpd-show.c: + write() no longer used
	+ print_error_and_exit() removed
	+ an outer loop added trying to connect
	+ no longer terminates when disconnected

2005-12-03  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* splitlines.sh: New file
	* Makefile, README: + splitlines.sh added

	* mpd-show.c: + -c option added

	* mpd-show.c: + -b and -B options added
	+ iconv added
	+ signals added
	+ print_song() corrected a bit
	+ diff_song() compares bar length instead of pos

2005-12-29  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* extractlinks.pl: + may specify several urls now
	+ assumes file:// and converts rel2abs if needed
	* TODO: + extractlinks.pl entry altered

	* getlyrics.pl: + an alternate arguments supported
	+ 2 empty lines added after header
	* TODO: + getlyrics.pl entry removed

2005-12-25  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* mp3rip: + --pipe added
	* quotes.txt: + quote about chamster and uear -= 42 added
	+ a few 'bugs' fixed

2005-12-23  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* Makefile: + drun symlink creating fixed
	* null.c: + license changed
	* null.sh: + works like null.c

	* check.sh: + ported to other shells
	+ --long-help added with examples
	+ suports options as separate arguments to short options (eg. -i 10)
	+ check_proc_load()  and  check_proc()  added
	+ hech* aliases added
